@startuml ModelUML
package Model {
    class "RandomId" {
        {static} +String* AUTO_ID_ALPHABET
        {static} +String* generate()
    }

    abstract class "DbItem" {
        +Collections* collections
        +void setFromDocument()
        +dynamic getData()
    }
    "DbItem" o-- "Collections"

    abstract class "User" {
        +String* id
        +String* name
        +String* surname
        +DateTime* birthDate
    }
    "DbItem" <|-- "User"

    package Expert {
        class "Expert" {
            +LatLng* address
            +String* email
            +String* phoneNumber
            +String* profilePhoto
            +Collections* collections
            +void setFromDocument()
            +dynamic getData()
        }
        "User" <|-- "Expert"
        "Expert" o-- "Collections"
    }

    package BaseUser {
        class "Report" {
            +String* id
            +String* category
            +String* description
            +DateTime* date
            +Collections* collections
            +void setFromDocument()
            +dynamic getData()
        }
        "DbItem" <|-- "Report"
        "Report" o-- "Collections"

        class "BaseUser" {
            +Collections* collections
            +void setFromDocument()
            +dynamic getData()
        }
        "User" <|-- "BaseUser"
        "BaseUser" o-- "Collections"
    }
}
@enduml